[dp2] Fix yet again the alignment of the record count. How can something this easy be this shitty in css??????

--- a/to.etc.domui/src/main/resources/resources/themes/scss/winter/_datapager2.scss
+++ b/to.etc.domui/src/main/resources/resources/themes/scss/winter/_datapager2.scss
@@ -62,10 +62,9 @@ $pager2-button-bg: $alt-button-bg !default
 	}
 
 	.ui-dp2-nurec {
+		display: flex;
+		align-items: center;
 		font-size: small;
-		vertical-align: middle;
-		padding: 0.5em 1em;
-		margin: 1px 0;
 	}
 	.ui-dp2-trunc {
 		display: inline-block;
